--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-# Compiled source #
-###################
 *.com
 *.class
 *.dll
 *.exe
 *.o
 *.so
+*.DotSettings
+*.user
 
 node_modules/
 wwwroot/
@@ -24,14 +24,10 @@ dist/
 *.tar
 *.zip
 
-# Logs and databases #
-######################
 *.log
 *.sql
 *.sqlite
 
-# OS generated files #
-######################
 .DS_Store
 .DS_Store?
 ._*
@@ -41,4 +37,3 @@ ehthumbs.db
 Thumbs.db
 /fritzbox-settings.json
 /publish.ps1
-/src/ClockWork/*.DotSettings
